--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -5,6 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Countdown timer</title>
     <link rel="stylesheet" href="css/common.css" />
+    <style>
+      .timer {
+        display: flex;
+        gap: 20px;
+        margin-top: 20px;
+      }
+      .field {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        color: #800000;
+      }
+      .value {
+        font-size: 56px;
+        font-weight: 800;
+      }
+      .label {
+        font-size: 24px;
+      }
+    </style>
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
@@ -31,6 +51,6 @@
       </div>
     </div>
 
-    <script src="js/02-timer.js"></script>
+    <script src="js/02-timer.js" type="module"></script>
   </body>
 </html>
